[gd_scene load_steps=7 format=2]

[ext_resource path="res://planets/Planet3D.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/arrow.tres" type="Material" id=2]

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.05
bottom_radius = 0.05
height = 7.0

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.001
bottom_radius = 0.1
height = 0.5

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
flags_do_not_receive_shadows = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereShape" id=2]

[node name="Planet" type="Spatial"]
script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]

[node name="LinePoint" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -4.5 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -0.8 )
mesh = SubResource( 5 )
material/0 = ExtResource( 2 )

[node name="PlanetMesh" type="MeshInstance" parent="."]
cast_shadow = 0

[node name="Draw" type="ImmediateGeometry" parent="PlanetMesh"]
material_override = SubResource( 1 )
cast_shadow = 0

[node name="Area" type="Area" parent="PlanetMesh"]

[node name="CollisionShape" type="CollisionShape" parent="PlanetMesh/Area"]
shape = SubResource( 2 )
[connection signal="input_event" from="PlanetMesh/Area" to="." method="_on_Area_input_event"]
